[Fix] grid view of domain cards when more than 5 (#1369)
* Fix grid view of domain cards when more than 5

* Also fit 5 when there is a scrollbar

--- a/styles/less/global/inventory-fieldset-items.less
+++ b/styles/less/global/inventory-fieldset-items.less
@@ -12,7 +12,8 @@
     .card-list {
         display: flex;
         flex-direction: row;
-        gap: 10px;
+        flex-wrap: wrap;
+        gap: 6px;
         align-items: center;
     }
 }
