--- a/styles/less/global/inventory-item.less
+++ b/styles/less/global/inventory-item.less
@@ -290,7 +290,7 @@
     .card-item {
         position: relative;
         height: 120px;
-        width: 100px;
+        width: 98px;
         border: 1px solid light-dark(@dark-blue, @golden);
         border-radius: 6px;
         cursor: pointer;
